--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,8 +2,16 @@ env:
   commonjs: true
   es2021: true
   node: true
-extends: airbnb-base
-overrides: []
+  mocha: true
+extends:
+  - airbnb-base
+  - plugin:mocha/recommended
+overrides:
+  - files:
+    - test/**/*.js
+    rules:
+      func-names: off
+      prefer-arrow-callback: off
 parserOptions:
   ecmaVersion: latest
 rules: {
