--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^8.41.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-mocha": "^10.1.0",
     "husky": "^8.0.0",
     "mocha": "^10.2.0"
   }
