--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-mocha": "^10.1.0",
     "husky": "^8.0.0",
     "mocha": "^10.2.0",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "supertest": "^6.3.3"
   }
 }
