--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint-fix": "eslint --fix .",
     "lint": "eslint .",
     "prepare": "husky install",
-    "test": "mocha --recursive --reporter json > test-results.json",
+    "test": "mocha test/mocha --reporter json > test-results.json",
     "check-coverage": "nyc --check-coverage --lines 35 mocha --recursive"
   },
   "dependencies": {
